argocd/kustomized/vault/vault-dashboard-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault-ingressroute
  namespace: vault
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vault.vasylchuk.org.ua`)
      kind: Rule
      services:
        - name: vault
          port: 8200
  tls:
    certResolver: letsencrypt

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redirect-http-vault
  namespace: vault
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`vault.vasylchuk.org.ua`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
          namespace: kube-system
      services:
        - name: noop-svc
          namespace: kube-system
          port: 80
